@@ -178,6 +178,9 @@ List of node hostnames
 \fB%N\fR
 List of node names
 .TP
+\fB%o\fR
+List of node communication addresses
+.TP
 \fB%P\fR
 Partition name
 .TP
